edite some text

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Abdul Qudoos | web developer
 description: Porfolio site and blog for Abdul Qudoos
-taglong: Porfolio site and blog for Abdul Qudoos
+taglong: Porfolio site and blog of Abdul Qudoos
 tagshort: Abdul Qudoos site
 url: https://qudosabdu.github.io
 baseurl: ""
