updated Default yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 
-title: Abdul Qudoos | Full Stack Developer & Software Engineer
+title: Abdul Qudoos | Full Stack Software Engineer
 description: Abdul Qudoos - Experienced Full Stack Developer and Software Engineer specializing in MERN stack, React.js, Node.js, AI development, and Agentic AI. Computer Systems Engineering graduate from Dawood University, Karachi, Pakistan.
 taglong: Abdul Qudoos - Full Stack Developer, Software Engineer, MERN Stack Developer, React.js Expert, Node.js Developer, AI Engineer
 tagshort: Abdul Qudoos | Software Engineer
